# SmartRide

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: distances.csv  sites.csv
include/: Entities.h  Misc.h  SmartRide.hpp  Structures.h  csvWriter.h
include/Entities/: Driver.h  Passenger.h  Person.h  Ride.h
include/Structures/: AVLprices.h  DynamicRidePricing.h  MapGraph.h  Person.h  Ride.h
src/: Entities.cpp  SmartRide.cpp
src/Entities/: Person.cpp  Ride.cpp
src/Structures/: AVLprices.cpp  DynamicRidePricing.cpp  MapGraph.cpp  Person.cpp  Ride.cpp
